2005-03-23  Sven Neumann  <sven@gimp.org>

	* app/base/tile-swap.c (tile_swap_init): create the swap directory
	if it doesn't exist. Will still fail if the parent directory is not
	available. Still good enough to close bug #167506.

	* app/app_procs.c: tweaked error message.

2005-03-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/colortoalpha.c: unset "Keep transparency", it is
	not what the user wants if this plug-in is being used (bug #151910).

2005-03-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/screenshot.c: removed global variables; added a
	short delay after destroying the dialog so that the root window
	gets redrawn; moved camera icon to the action button.

2005-03-22  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/screenshot.c: always derive image from root
	window, fixes bug #144788.
	
2005-03-22  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpactiongroup.c
	* app/widgets/gimpcolorpanel.c: use gtk_action_set_sensitive()
	and gtk_action_set_visible() instead of setting the respective
	properties.

2005-03-22  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* configure.in: raise required librsvg version to 2.8.0
	* plug-ins/common/svg.c: change deprecated librsvg api,
	fixes bug #147662.
	
2005-03-21  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/sparkle.c
	* plug-ins/common/spheredesigner.c
	* plug-ins/common/struc.c
	* plug-ins/common/tileit.c
	* plug-ins/common/warp.c
	* plug-ins/common/whirlpinch.c
	* plug-ins/common/wind.c: handle situation where intersection
	of selection and drawable is empty; progress on bug #155733.

2005-03-21  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimptransformtool.c
	* app/tools/gimpfliptool.c
	* app/core/gimpdrawabletransform.c: avoid messages and critical
	error when transforming a drawable that does not intersect
	the selection.  

2005-03-21  Sven Neumann  <sven@gimp.org>

	* app/paint/gimpink.c: changed time-smoother code to use guint32